Added live reloading (NOT)

--- a/components/sass/style.scss
+++ b/components/sass/style.scss
@@ -3,6 +3,7 @@
  
 //Compass imports 			//dont need "_" or ".scss" 
 @import "compass";
+@import "compass/reset";
 @import "compass/css3/box-shadow";
  
 //Core partials
